# docs/swagger.yaml
@@ -1,4 +1,47 @@
 definitions:
+  account.Account:
+    properties:
+      bio:
+        type: string
+      cover_image:
+        type: string
+      created_at:
+        type: string
+      created_by:
+        type: string
+      email:
+        type: string
+      follower_count:
+        type: integer
+      following_count:
+        type: integer
+      full_name:
+        type: string
+      is_premium:
+        type: boolean
+      is_verified:
+        type: boolean
+      joined_at:
+        type: string
+      last_active:
+        type: string
+      location:
+        type: string
+      profile_image:
+        type: string
+      social_links:
+        items:
+          type: string
+        type: array
+      updated_at:
+        type: string
+      updated_by:
+        type: string
+      username:
+        type: string
+      website:
+        type: string
+    type: object
   account.Login:
     properties:
       email:
@@ -8,40 +51,106 @@ definitions:
     type: object
   account.LoginResponse:
     properties:
-      accessToken:
+      access_Token:
         type: string
-      accountId:
+      id:
         type: string
-      refreshToken:
-        type: string
-      userId:
+      refresh_Token:
         type: string
     type: object
   account.SignUp:
     properties:
-      accountId:
-        type: string
       email:
         type: string
-      password:
+      id:
         type: string
-      userId:
+      password:
         type: string
     type: object
   account.SignUpRes:
     properties:
-      accessToken:
+      access_Token:
         type: string
-      accountId:
+      id:
         type: string
-      refreshToken:
+      refresh_Token:
         type: string
-      userId:
+    type: object
+  account.UpdateAccount:
+    properties:
+      bio:
+        type: string
+      cover_image:
+        type: string
+      email:
+        type: string
+      full_name:
+        type: string
+      location:
+        type: string
+      profile_image:
+        type: string
+      social_links:
+        items:
+          type: string
+        type: array
+      username:
+        type: string
+      website:
         type: string
     type: object
 info:
   contact: {}
 paths:
+  /api/v1/account:
+    get:
+      consumes:
+      - application/json
+      description: Get Account Details
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/account.Account'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Get Account Details
+      tags:
+      - Account
+  /api/v1/account/edit:
+    put:
+      consumes:
+      - application/json
+      description: Update Account Details
+      parameters:
+      - description: Update Request
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/account.UpdateAccount'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Update Account Details
+      tags:
+      - Account
   /api/v1/account/login:
     post:
       consumes:
